--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     <nav class="main-nav">
         <div class="nav-content">
-            <!-- MODIFIED: Replaced text logo with image logo -->
             <a href="#" class="nav-logo">
                 <img src="./images/logo.png" alt="JNR Logo" class="logo-image">
             </a>
@@ -26,6 +25,8 @@
                 <a href="#collection"><svg class="icon nav-icon"><use xlink:href="icons.svg#icon-library"></use></svg>Collection</a>
                 <a href="#how-it-works"><svg class="icon nav-icon"><use xlink:href="icons.svg#icon-guide"></use></svg>How It Works</a>
                 <a href="#tech"><svg class="icon nav-icon"><use xlink:href="icons.svg#icon-cpu"></use></svg>Tech</a>
+                <!-- MODIFIED: Added Download link to navigation -->
+                <a href="#download"><svg class="icon nav-icon"><use xlink:href="icons.svg#icon-windows"></use></svg>Download</a>
             </div>
         </div>
     </nav>
@@ -179,6 +180,17 @@
                 </div>
             </div>
         </section>
+        
+        <!-- START: ADDED DOWNLOAD SECTION -->
+        <section id="download" class="tech-stack-section download-section">
+            <h2 class="animate-on-scroll" data-animation="fade-up">Ready to Start Your Journey?</h2>
+            <p class="animate-on-scroll" data-animation="fade-up" data-delay="100">Download the JNR desktop application for Windows and dive into your universe of music today.</p>
+            <a href="https://github.com/daniacostac/JNR/releases/download/1.0/net8.0-windows.rar" class="cta-button animate-on-scroll" data-animation="fade-up" data-delay="200" download>
+                <svg class="icon cta-icon"><use xlink:href="icons.svg#icon-windows"></use></svg>
+                Download for Windows (.rar)
+            </a>
+        </section>
+        <!-- END: ADDED DOWNLOAD SECTION -->
     </main>
 
     <footer>
